--- a/password_dataset.ipynb
+++ b/password_dataset.ipynb
@@ -89,7 +89,7 @@
         }
       ],
       "source": [
-        "# Install necessary packages\n",
+        "# Install packages\n",
         "!pip install python-Levenshtein strsimpy nltk matplotlib\n",
         "\n",
         "import nltk\n",
@@ -102,33 +102,33 @@
         "# Initialize the Jaro-Winkler object\n",
         "jaro_winkler = JaroWinkler()\n",
         "\n",
-        "# Function to check if a password is valid based on ASCII characters and length\n",
+        "# check if a password is valid based on ASCII characters and length\n",
         "def is_valid_password(password):\n",
         "    if 5 <= len(password) <= 17 and all(char in string.printable for char in password):\n",
         "        return True\n",
         "    return False\n",
         "\n",
-        "# Function to process the dataset\n",
+        "# process the dataset\n",
         "def preprocess_passwords(file_path):\n",
         "    with open(file_path, 'r', encoding='latin-1') as f:\n",
         "        passwords = [line.strip() for line in f]\n",
         "\n",
-        "    # Remove passwords that are too short, too long, or contain non-ASCII characters\n",
+        "    # remove too short, too long, or contain non-ASCII character passwords\n",
         "    passwords = [password for password in passwords if is_valid_password(password)]\n",
         "\n",
-        "    # Remove duplicate passwords\n",
+        "    # Remove duplicate\n",
         "    passwords = list(set(passwords))\n",
         "\n",
         "    return passwords\n",
         "\n",
-        "# Function to create password pairs (only considering subsequent passwords for simplicity)\n",
+        "# create password pairs\n",
         "def create_password_pairs(passwords):\n",
         "    password_pairs = []\n",
         "    for i in range(0, len(passwords)-1, 2):  # Take subsequent pairs\n",
         "        password_pairs.append((passwords[i], passwords[i+1]))\n",
         "    return password_pairs\n",
         "\n",
-        "# Function to compute Levenshtein and Jaro-Winkler distances for each pair\n",
+        "# compute Levenshtein and Jaro-Winkler distances for each pair\n",
         "def analyze_distances(password_pairs):\n",
         "    labeled_data = []\n",
         "    for pw1, pw2 in password_pairs:\n",
@@ -143,7 +143,7 @@
         "        })\n",
         "    return labeled_data\n",
         "\n",
-        "# Function to assign a label based on the Levenshtein and Jaro-Winkler distances\n",
+        "# assign a label based on the Levenshtein and Jaro-Winkler distances\n",
         "def assign_label(lev_dist, jaro_winkler_dist):\n",
         "    # Custom rules for labeling based on distance values\n",
         "    if lev_dist == 0:\n",
@@ -157,9 +157,9 @@
         "    else:\n",
         "        return 'Uncategorized'\n",
         "\n",
-        "# Function to visualize the password pairs count\n",
+        "# visualize the password pairs count\n",
         "def visualize_password_pairs(labeled_data):\n",
-        "    # Visualizing count of password pairs based on their labels\n",
+        "    # visualize count of password pairs based on their labels\n",
         "    labels = [entry['label'] for entry in labeled_data]\n",
         "    label_counts = {label: labels.count(label) for label in set(labels)}\n",
         "\n",
@@ -171,23 +171,23 @@
         "    plt.xticks(rotation=45)\n",
         "    plt.show()\n",
         "\n",
-        "# Main function to process, analyze, and visualize the dataset\n",
+        "# process, analyze, and visualize the dataset\n",
         "def main(file_path):\n",
-        "    # Step 1: Preprocess the dataset\n",
+        "    # preprocess the dataset\n",
         "    passwords = preprocess_passwords(file_path)\n",
         "\n",
-        "    # Step 2: Create password pairs\n",
+        "    # create password pairs\n",
         "    password_pairs = create_password_pairs(passwords)\n",
         "\n",
-        "    # Step 3: Analyze distances and label the dataset\n",
+        "    # analyze distances and label the dataset\n",
         "    labeled_data = analyze_distances(password_pairs)\n",
         "\n",
-        "    # Step 4: Visualize password pair counts\n",
+        "    # visualize password pair counts\n",
         "    visualize_password_pairs(labeled_data)\n",
         "\n",
         "    return labeled_data\n",
         "\n",
-        "# Run the main function on your dataset\n",
+        "# run main function\n",
         "labeled_data = main('version_1.txt')\n"
       ]
     }
