--- a/password_dataset.ipynb
+++ b/password_dataset.ipynb
@@ -89,6 +89,7 @@
         }
       ],
       "source": [
+        "#Removes password duplicates, remove too short, too long and Non-ASCII passwords, compute Levenshtein and Jaro-Winkler distances for each pair, assign levels and visualize the data\n",
         "# Install packages\n",
         "!pip install python-Levenshtein strsimpy nltk matplotlib\n",
         "\n",
