--- a/levenshtein version1.ipynb
+++ b/levenshtein version1.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "A100",
-      "authorship_tag": "ABX9TyNBwNdriq/+p+NKmrvTvmOO",
+      "authorship_tag": "ABX9TyPbES4rciavA7yToGP2ZXRf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,14 +31,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "381D6qIePtxr",
-        "outputId": "35518305-7438-404f-eea0-676cc6182cb7"
+        "outputId": "e5acad95-b559-441b-902b-d87d726d5862"
       },
       "outputs": [
         {
@@ -5094,23 +5094,22 @@
         }
       ],
       "source": [
-        "# Install necessary packages\n",
+        "\n",
         "!pip install nltk seaborn\n",
         "\n",
-        "# Import libraries\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "from nltk.metrics import edit_distance\n",
         "import nltk\n",
-        "nltk.download('punkt')  # Download necessary NLTK data\n",
+        "nltk.download('punkt')\n",
         "\n",
-        "# Function to filter passwords based on length and ASCII characters\n",
+        "#filter passwords based on length and ASCII characters\n",
         "def filter_passwords(password_list):\n",
         "    filtered = [pwd for pwd in password_list if 5 <= len(pwd) <= 17 and pwd.isascii()]\n",
         "    return list(set(filtered))  # Remove duplicates\n",
         "\n",
-        "# Function to load passwords from the file in batches\n",
+        "#load passwords in batches\n",
         "def load_passwords(filename, batch_size=100000):\n",
         "    with open(filename, 'r', encoding='latin-1') as f:\n",
         "        batch = []\n",
@@ -5122,30 +5121,30 @@
         "        if batch:\n",
         "            yield filter_passwords(batch)\n",
         "\n",
-        "# Function to compute Levenshtein distances for a batch of passwords\n",
+        "#compute Levenshtein distances for a batch of passwords\n",
         "def compute_levenshtein_distances(password_batch):\n",
         "    num_passwords = len(password_batch)\n",
         "    distances = []\n",
         "\n",
         "    for i in range(num_passwords):\n",
-        "        for j in range(i + 1, num_passwords):  # Only upper triangle to save space\n",
+        "        for j in range(i + 1, num_passwords):  #only upper triangle to save space\n",
         "            dist = edit_distance(password_batch[i], password_batch[j])\n",
         "            distances.append(dist)\n",
         "    return distances\n",
         "\n",
-        "# Load and process the dataset in chunks\n",
+        "#load and process the dataset in chunks\n",
         "password_file = 'version_1.txt'  # Path to the password dataset\n",
         "\n",
-        "# Initialize an empty list to store all distances\n",
+        "#initialize an empty list to store all distances\n",
         "all_distances = []\n",
         "\n",
-        "# Process the dataset in batches\n",
+        "#process the dataset in batches\n",
         "for batch in load_passwords(password_file, batch_size=5000):\n",
         "    batch_distances = compute_levenshtein_distances(batch)\n",
         "    all_distances.extend(batch_distances)\n",
         "    print(f\"Processed a batch of {len(batch)} passwords, total distances computed: {len(all_distances)}\")\n",
         "\n",
-        "# 1. Plot the distribution of Levenshtein distances as a histogram\n",
+        "#plot the distribution of Levenshtein distances as a histogram\n",
         "plt.figure(figsize=(8, 6))\n",
         "plt.hist(all_distances, bins=range(18), alpha=0.75, color='blue', edgecolor='black')\n",
         "plt.title('Distribution of Levenshtein Distances')\n",
@@ -5154,23 +5153,23 @@
         "plt.grid(True)\n",
         "plt.show()\n",
         "\n",
-        "# # 1. Plot the distribution of Levenshtein distances as a histogram\n",
+        "# #plot the distribution of Levenshtein distances as a histogram\n",
         "# plt.figure(figsize=(8, 6))\n",
         "\n",
-        "# # Plot histogram with custom bins and ticks\n",
+        "# #plot histogram with custom bins and ticks\n",
         "# plt.hist(all_distances, bins=range(18), alpha=0.75, color='blue', edgecolor='black')\n",
         "# plt.title('Distribution of Levenshtein Distances')\n",
         "# plt.xlabel('Levenshtein Distance')\n",
         "# plt.ylabel('Number of Passwords')\n",
         "\n",
-        "# # Set custom x-axis ticks (0, 2, 4, 6, ..., 16)\n",
+        "# #set custom x-axis ticks (0, 2, 4, 6, ..., 16)\n",
         "# plt.xticks([0, 2, 4, 6, 8, 10, 14, 16])\n",
         "\n",
-        "# # Set y-axis to use a linear scale from 0 to a max value based on your data\n",
+        "# #set y-axis to use a linear scale from 0 to a max value based on your data\n",
         "# plt.ylim(0, 10**6)\n",
         "# plt.yticks(np.arange(0, 10**6 + 1, step=10**5))  # Linear ticks from 0 to 1 million\n",
         "\n",
-        "# # Add gridlines for better readability\n",
+        "# #add gridlines for better readability\n",
         "# plt.grid(True, which=\"both\", ls=\"--\")\n",
         "\n",
         "# # Show the plot\n",
